Added styling to elements

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <meta name="description" content="Create react app as progressive web application.">
     <title>elementeum</title>
-    <meta name="theme-color" content=""/>
+    <meta name="theme-color" content="#2c2e38"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="PWA Tips">
     <meta name="application-name" content="PWA Tips">
-    <meta name="msapplication-navbutton-color" content="">
-    <meta name="msapplication-TileColor" content="">
+    <meta name="msapplication-navbutton-color" content="#2c2e38">
+    <meta name="msapplication-TileColor" content="#2c2e38">
     <meta name="msapplication-TileImage" content="">
 
     <link rel="apple-touch-icon" sizes="180x180" href="">
