Updated color palatte

--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-    <meta name="description" content="Create react app as progressive web application.">
+    <meta name="description" content="elementeum, an periodic table progressive web application.">
     <title>elementeum</title>
-    <meta name="theme-color" content="#2c2e38"/>
+    <meta name="theme-color" content="#383f4c"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="PWA Tips">
-    <meta name="application-name" content="PWA Tips">
-    <meta name="msapplication-navbutton-color" content="#2c2e38">
-    <meta name="msapplication-TileColor" content="#2c2e38">
+    <meta name="apple-mobile-web-app-title" content="elementeum">
+    <meta name="application-name" content="elementeum">
+    <meta name="msapplication-navbutton-color" content="#383f4c">
+    <meta name="msapplication-TileColor" content="#383f4c">
     <meta name="msapplication-TileImage" content="">
-
     <link rel="apple-touch-icon" sizes="180x180" href="">
     <link rel="apple-touch-startup-image" href="">
     <link rel="mask-icon" href="" color="">
